--- a/src/components/HomePage/style.scss
+++ b/src/components/HomePage/style.scss
@@ -1,24 +1,45 @@
-.home-page {
-  margin: 124px 80px 124px 80px;
+@import '../../variable.scss';
 
-  .ticket-list-container {
-    display: flex;
-    flex-wrap: wrap;
+.home-page {
+  padding: 124px 6%;
+
+  @media (max-width: 768px) {
+    padding-inline: 4%;
   }
 
   .page-header {
     display: inline-flex;
     justify-content: space-between;
-    width: 100%;
     color: #ffffff;
     font-family: Assistant;
+    position: sticky;
+    top: 0;
+    background-color: $tickchakBackgroundDark;
+    z-index: 1;
+    padding: 10px;
+    width: 100%;
 
-    .plus-icon {
-      cursor: pointer;
+    .buttons {
+      width: 50%;
+      min-width: 330px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
+    .icon-btn {
       background-color: transparent;
       border: none;
+      &.plus {
+        cursor: pointer;
+      }
+      &.search {
+        cursor: not-allowed;
+      }
       img {
-        width: 32px;
+        width: 40px;
       }
     }
 
@@ -29,6 +50,11 @@
     .text {
       font-size: 16pt;
     }
+  }
+
+  .ticket-list-container {
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .page-footer {
